Changelog for GoodNews

- [#54] fixed typos in sample.GoodNewsSubscriptionBoxTpl Chunk
- [#53] fixed typo in requestlinks.class.php
- [#52] fixed typo in sample.GoodNewsContentCollectionRowTpl
- [#51] fixed typos in LOG_LEVEL_WARN constant
- send mail method now also respects mail port setting from MODX system settings
- removed path and TV resolvers from setup process
- fixed a problem in Registration/Subscription process where username wasn't checked before trying to create user
- added feature to use GoodNewsUpdateProfile Snippet for logged in MODX users (not only via sid URL param)


GoodNews 1.4.6-pl (2017-03-10)
--------------------------------------------------

- fixed a problem where Subscriber placeholders in newsletter templates were URL encoded before processing
- fixed a PHP warning: Undefined variable: base
- removed permission check for „Toggle send process“
- removed grid flickering (grid mask) when auto-refresh is activated
- fixed a problem where GoodNews groups which were assigned to MODX user groups couldn't be unassigned


GoodNews 1.4.5-pl (2017-02-19)
--------------------------------------------------

- exclude blocked MODX users from recipients collection
- fixed a problem in Subscription controller when &usernameField property is set
- [#43] complete rewrite of automatic full URL conversion (now respects #anchor links external links and protocol-relative URLs)
- fixed errors in package uninstall process
- refined Package installer and uninstaller to output more usefull informations
- added setup options to package installer to enable/disable installation of sample Resource documents
- added system setting to enable/disable automatic URL conversion in email body
- fixed "Created by" dropdown username display in mailing editor
- "Save" button in mailing editor has now MODX primary button color
- fixed a problem where selecting Collection rows didn't fire a resource form change ("Save" button wasn't activated)